GPencil: Removing vertex group mixes up vertex weight data #77473

Closed
opened 2020-06-05 23:54:42 +02:00 by Marcelo Demian Gómez · 4 comments

System Information
Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked:

Short description of error
When removing a vertex group from a Grease Pencil object, if the vertex group is not the last one that was added, the information for the remaining groups is deleted or gets mixed up.

Exact steps for others to reproduce the error

  1. In a new file add a new Grease pencil object.
  2. Create a stroke.
  3. Add two vertex groups: Group and Group.001
  4. Assign all the stroke's points to the first vertex group "Group"
  5. Assign some of the stroke's points to the second vertex group "Group.001"
  6. Remove the first vertex group "Group"
  7. Attempt to select the points of the second vertex group: the information is lost.
  8. Add a new vertex group: the vertices that belonged to Group.001 are now assigned to this new vertex group.

I created a patch that fixes this: D7943
Not sure if this is the correct procedure. I apologize if it's not.

**System Information** Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: **Short description of error** When removing a vertex group from a Grease Pencil object, if the vertex group is not the last one that was added, the information for the remaining groups is deleted or gets mixed up. **Exact steps for others to reproduce the error** 1) In a new file add a new Grease pencil object. 2) Create a stroke. 3) Add two vertex groups: Group and Group.001 4) Assign all the stroke's points to the first vertex group "Group" 5) Assign some of the stroke's points to the second vertex group "Group.001" 6) Remove the first vertex group "Group" 7) Attempt to select the points of the second vertex group: the information is lost. 8) Add a new vertex group: the vertices that belonged to Group.001 are now assigned to this new vertex group. I created a patch that fixes this: [D7943](https://archive.blender.org/developer/D7943) Not sure if this is the correct procedure. I apologize if it's not.

Added subscriber: @MarceloGomez

Added subscriber: @MarceloGomez
Antonio Vazquez changed title from Removing Grease Pencil vertex group mixes up vertex weight data to GPencil: Removing vertex group mixes up vertex weight data 2020-06-06 10:07:52 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 7bd73f562a

This issue was referenced by 7bd73f562a906558abd0cd5cfd17ebc7a6068898

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-06-06 10:20:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77473
No description provided.